[gd_scene load_steps=2 format=3 uid="uid://dvscf6o0kan3f"]

[ext_resource type="Script" path="res://Scenes/water_area.gd" id="1_b0q2x"]

[node name="WaterArea" type="Area2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_b0q2x")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
